--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/pngtree-watercolor-library-book-clip-art-png-image_10285452.png
+   - assets/images/rows.png
+   - assets/images/workers.png
    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
